# sweProject

./: .gitignore  Cargo.toml  README.md  swe.txt
backend/: .env  app.js  package-lock.json  package.json  server.js
backend/routes/: index.js
backend/src/: app.js  server.js
backend/src/routes/: index.js
frontend/: .env  Cargo.toml  index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  AuthProvider.js  Error.js  index.js  lib.rs
frontend/src/components/: Dashboard.js  Hero.css  Hero.js  Layout.js  LineChart.js  NavBar.js  RunningInput.js  RunningPlots.js  TestConnection.js  WorkoutHistory.js  WorkoutInput.js
frontend/src/login/: Login.js  SignUp.js
frontend/src/pages/: Home.js  Login.js  Profile.js  SignUp.js  WorkoutDashboard.js  WorkoutTracker.js
frontend/src/routes/: ProtectedRoute.js  Root.js
src/: main.rs
src/components/: app.rs
