[package]
name = "leptos-axum-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
leptos = { version = "0.4", features = ["ssr"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
tower-http = { version = "0.4", features = ["fs", "cors"] }
surrealdb = { version = "1.0.0", features = ["kv-mem"] }
futures = "0.3"
anyhow = "1.0"

[features]
default = ["ssr"]
ssr = ["leptos/ssr"]